# hs2048

./: CHANGELOG.md  README.md  flake.nix  fourmolu.yaml  hie.yaml  hs2048.cabal
src/: GameLogic.hs  Main.hs  Render.hs
