cabal-version:      2.4
name:               hs2048
version:            0.1.1.1
license:            MIT
copyright:          2022 Joshua Niemelä
maintainer:         josh@jniemela.dk
author:             Joshua Niemelä
category:           Game

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    base            >=4.13.0.0 && <=4.18.0.0,
    async           >= 2.2.4 && < 2.3,
    bytestring      >= 0.10.12 && < 0.11,
    text            >= 1.2.5 && < 1.3,
    filepath        >= 1.4.2 && < 1.5,
    network-simple  >= 0.4.5 && < 0.5,
    random          >= 1.2.1 && < 1.3,
    relude          >= 1.0.0 && < 1.1

  hs-source-dirs:     src
  default-language:   Haskell2010

executable hs2048
  import:  shared
  main-is: Main.hs
